# corrida3d_cg

./: CMakeLists.txt  README.md  testeimportacao.cpp  testeimportacao.h  vcpkg.json
glad/include/glad/: glad.h
glad/src/: glad.c
